--- a/app/azuredns.tmpl
+++ b/app/azuredns.tmpl
@@ -1,2 +1,2 @@
-{{ range $host, $containers := groupByMulti $ "Env.VIRTUAL_HOST" "," }}
-{{ $host }}{{ end }}
+{{ range $host, $containers := groupByMulti $ "Env.VIRTUAL_HOST" "," }}{{ $host }}
+{{ end }}
